--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | NFT preview card component</title>
@@ -16,18 +16,40 @@
 </head>
 <body>
 
-  Equilibrium #3429
+<div>
 
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="cardContainer">
+    <div class="imgContainer">
+      <img src="./images/image-equilibrium.jpg" alt="NFT art of glass cube">
+    </div>
+    <div class="cardFooter">
+      <div class="title">
+        Equilibrium #3429
+      </div>
+      <div>
+        Our Equilibrium collection promotes balance and calm.
+      </div>
+      <div></div>
+        <div>
+          0.041 ETH
+        </div>
+        <div>
+          3 days left
+        </div>
+      </div>
+      <div>
+        Creation of Jules Wyvern
+      </div>
+    </div>
   </div>
+
+
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.johnmdarrin.com">JMD</a>.
+    </div>
+
+</div>    
 </body>
 </html>
