--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet"> 
   <title>Frontend Mentor | NFT preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -19,36 +21,46 @@
 <div>
 
   <div class="cardContainer">
+
     <div class="imgContainer">
-      <img src="./images/image-equilibrium.jpg" alt="NFT art of glass cube">
+      <img class="img" src="./images/image-equilibrium.jpg" alt="NFT art of glass cube">
     </div>
-    <div class="cardFooter">
-      <div class="title">
-        Equilibrium #3429
-      </div>
-      <div>
-        Our Equilibrium collection promotes balance and calm.
-      </div>
-      <div></div>
-        <div>
-          0.041 ETH
+
+      <div class="cardFooter">
+        <div class="title">
+          Equilibrium #3429
         </div>
-        <div>
-          3 days left
+        <div class="bioText">
+          Our Equilibrium collection promotes balance and calm.
+        </div>
+        <div class="ethTimeContainer">
+          <div class="ethContainer">
+            <img class="ethLogo" src="./images/icon-ethereum.svg" alt="eth logo">
+            <div class="ethText">
+              0.041 ETH
+            </div>
+          </div>
+          <div class="timeLeftText">
+            3 days left
+          </div>
+        </div>
+        <div class="line"></div>
+        <div class="photoNameContainer">
+          <img class="avatarImg" src="./images/image-avatar.png" alt="profile picture">
+          <div class="creator">
+            Creation of Jules Wyvern
+          </div>
         </div>
       </div>
-      <div>
-        Creation of Jules Wyvern
-      </div>
-    </div>
+
   </div>
 
 
-
-    <div class="attribution">
+<!--
+    <div class="attribution footer">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://www.johnmdarrin.com">JMD</a>.
-    </div>
+    </div>-->
 
 </div>    
 </body>
