quick css edits

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="photoNameContainer">
           <img class="avatarImg" src="./images/image-avatar.png" alt="profile picture">
           <div class="creator">
-            Creation of Jules Wyvern
+            <span class="creatorColors">Creation of</span>&nbsp<span class="name">Jules Wyvern</span>
           </div>
         </div>
       </div>
