finished design, added hover to image

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
     <div class="imgContainer">
       <img class="img" src="./images/image-equilibrium.jpg" alt="NFT art of glass cube">
+      <div class="overlay">
+        <img class="eyeLogo" src="./images/icon-view.svg" alt="view image">
+      </div>
     </div>
 
       <div class="cardFooter">
