final edits, cleaned up code

--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet"> 
-  <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet"> 
+  <title>NFT preview card component</title>
 </head>
+
+
 <body>
-
-<div>
-
   <div class="cardContainer">
 
     <div class="imgContainer">
@@ -30,12 +25,15 @@
     </div>
 
       <div class="cardFooter">
+
         <div class="title">
           Equilibrium #3429
         </div>
+
         <div class="bioText">
           Our Equilibrium collection promotes balance and calm.
         </div>
+
         <div class="ethTimeContainer">
           <div class="ethContainer">
             <img class="ethLogo" src="./images/icon-ethereum.svg" alt="eth logo">
@@ -47,7 +45,9 @@
             3 days left
           </div>
         </div>
+
         <div class="line"></div>
+
         <div class="photoNameContainer">
           <img class="avatarImg" src="./images/image-avatar.png" alt="profile picture">
           <div class="creator">
@@ -55,16 +55,11 @@
           </div>
         </div>
       </div>
-
   </div>
 
-
-<!--
     <div class="attribution footer">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://www.johnmdarrin.com">JMD</a>.
-    </div>-->
-
-</div>    
+    </div>
 </body>
 </html>
